ajout cv pdf, finitions responsive design, correction du bug du navbar collapsed, création traitement formulaire.php

--- a/App/public/sass/layout/_base.scss
+++ b/App/public/sass/layout/_base.scss
@@ -28,7 +28,6 @@ body {
 
 .cardaccueil {
     padding: 5px;
-    margin : 15px;
     color  : $text-color;
 }
 
@@ -49,4 +48,13 @@ body {
 
 .paragraphes {
     color: $text-color;
+}
+
+section{
+    @include responsive($sm){
+        width: 95%;
+    }
+    @include responsive($med){
+        width: 65%;
+    }
 }
