--- a/App/public/sass/main.css
+++ b/App/public/sass/main.css
@@ -7,6 +7,14 @@ nav li {
   list-style-type: none;
 }
 
+nav a {
+  color: #02C9C9;
+}
+
+.navbar-toggler-icon {
+  color: #02C9C9;
+}
+
 h1,
 h2,
 h3,
@@ -37,7 +45,6 @@ body {
 
 .cardaccueil {
   padding: 5px;
-  margin: 15px;
   color: #BFDBF7;
 }
 
@@ -60,6 +67,18 @@ body {
 
 .paragraphes {
   color: #BFDBF7;
+}
+
+@media (min-width: 28em) {
+  section {
+    width: 95%;
+  }
+}
+
+@media (min-width: 40em) {
+  section {
+    width: 65%;
+  }
 }
 
 .footer {
@@ -114,8 +133,7 @@ body {
 }
 
 .container {
-  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(50%, #015252), color-stop(12%, #cefafa));
-  background-image: linear-gradient(to bottom, #015252 50%, #cefafa 12%);
+  background-image: linear-gradient(to bottom, #015252 400px, #cefafa 12%);
   border-radius: 15px;
 }
 
@@ -149,12 +167,15 @@ body {
 
 .blog-section,
 .contact-section {
-  width: 65%;
   text-align: center;
   margin-right: auto;
   margin-left: auto;
   margin-bottom: 15px;
   padding: 10px 50px 10px;
+}
+
+#reseaux {
+  padding: 0.5rem;
 }
 
 .blog-list {
